<resources>
    <string name="app_name">EasyPermissionsKt</string>
    <string name="single_permission">Request permission</string>
    <string name="more_than_one_permissions">Request Permissions</string>
    <string name="has_permission_for">Has permission for</string>
    <string name="should_show_permission_rationale">Should show permission rationale</string>
    <string name="request_permission_with_explain_why">Request permission with ExplainWhy</string>
    <string name="permission_dialog_title">Permission Request</string>
    <string name="permission_dialog_description">To easily connect with family and friends, allow the app access to your contacts</string>
    <string name="permission_dialog_positive_button">Continue</string>
    <string name="permission_dialog_negative_button">Not now</string>
    <string name="open_fragment">Open Fragment</string>
</resources>